src/screens/snapshots/pmp__screens__task_list__tests__task_list_confirm_delete_leaf_snapshot.snap
---
source: src/screens/task_list.rs
assertion_line: 664
expression: render_to_string(&screen)
---
┌ALPHA─────────────────────────────────────────────────────┐
│                   Delete task T3? (y/N)                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
