src/screens/snapshots/pmp__screens__task_list__tests__task_list_confirm_delete_with_deps_snapshot.snap
---
source: src/screens/task_list.rs
assertion_line: 676
expression: render_to_string(&screen)
---
┌ALPHA─────────────────────────────────────────────────────┐
│ Deleting will remove 1 dependency links. Continue? (y/N) │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
