src/screens/snapshots/pmp__screens__task_list__tests__task_list_empty_snapshot.snap
---
source: src/screens/task_list.rs
assertion_line: 657
expression: render_to_string(&screen)
---
┌EMPTY─────────────────────────────────────────────────────┐
│             No tasks. Press c to create one.             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
