src/screens/snapshots/pmp__screens__task_list__tests__task_list_with_tasks_snapshot.snap
---
source: src/screens/task_list.rs
expression: render_to_string(&screen)
---
┌ALPHA─────────────────────────────────────────────────────┐
│┌Tasks───────────────────────────────────────────────────┐│
││Name                       Status         Priority      ││
││T3                         Todo           High          ││
││T2                         Todo           Medium        ││
││T1                         Todo           Low           ││
││T4                         In Progress    Low           ││
││T5                         Done           Medium        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘
